tests/script_runtime_errors/function_error_2/error.txt
Error: 
    2 | math::max("snot", a)
      | ^^^^^^^^^^^^^^^^^^^^ Bad type passed to function math::max/2